src/index.scss
@font-face {
  font-family: pixel;
  src: url(./assets/font.ttf);
}

.container {
  display: flex;
  // position: relative;
  justify-content: center;
  align-items: center;
}

#gameCanvas {
  margin-top: 100px;
  border: 6px rgb(101, 215, 235) solid;
  border-radius: 2px;
  background-image: url(../src/assets/background.png);
}

.snowcontainer {
  position: absolute;
  top: 14.5%;
  left: 0;
  right: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 2;
}

body {
  min-height: 90vh;
  background: url('../src/assets/websiteBG.jpg');
  background-position-x: left;
  background-position-y: top;
  // mix-blend-mode: color-burn;
}

.title {
  display: flex;
  justify-content: center;
  position: relative;
  top: 50px;
  z-index: 3;
}

#instructions {
  // left: 15.75%;
  background: black;
  border: 3px rgb(101, 215, 235) solid;
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 3;
  border-radius: 3px;
  opacity: 75%;
  font-family: pixel;
  color: white;
  font-size: 24px;
  flex-direction: column;
  // transform: translate(50%, 50%);
  // margin: auto;
  width: 700px;
  list-style: none;
  padding: 5px;
  top: 20%;
  text-align: center;
}

#instructions li:first-child {
  padding: 10px;
  margin-bottom: 10px;
  font-weight: bold;
  font-size: 48px;
}

.hidden {
  visibility: hidden;
  background: none;
  border: none;
  list-style: none;
  opacity: 100%;
}

.hidden li {
  visibility: hidden;
  background: none;
  border: none;
  list-style: none;
  opacity: 100%;
}

footer li {
  list-style: none;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

footer {
  position: absolute;
  bottom: 0;
  // background:rgb(21, 22, 22);
  background-image: linear-gradient(rgb(24, 24, 24), rgb(0, 0, 0));
  width: 100vw;
  font-family: pixel;
  font-size: 24px;
  color: rgb(177, 182, 182);
  line-height: 0;
  z-index: -1;
}

.footer-contents {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  text-align: center;
}

.footer-contents p {
  max-width: 900px;
  font-size: 14px;
}

.socials {
  list-style: none;
  display: flex;
  align-items: center;
  justify-content: center;
  padding-right: 25px;
}

.socials img {
  padding-right: 10px;
}

.socials img:hover {
  opacity: 50%;
}

